@@ -89,7 +89,9 @@ public class LoginApiFormFragment extends BaseFragment {
         String hassServerUrl = viewModel.getFormData().getServerUrlTrimmed();
         String grocyServerUrl = viewModel.getFormData().getServerUrlTrimmed();
         if(ingressProxyId != null) {
-            if(grocyServerUrl.replaceAll(":[0-9]+$", "").equals(grocyServerUrl)) {
+            if(grocyServerUrl.replaceAll(":[0-9]+$", "").equals(grocyServerUrl)
+                    && !grocyServerUrl.contains("ui.nabu.casa")
+            ) {
                 hassServerUrl += ":8123";
                 grocyServerUrl += ":8123";
             }
@@ -111,7 +113,11 @@ public class LoginApiFormFragment extends BaseFragment {
         Intent browserManageKeys = new Intent(Intent.ACTION_VIEW);
         String url = viewModel.getFormData().getServerUrlTrimmed();
         if(viewModel.getFormData().getUsingGrocyHassAddOn()) {
-            if(url.replaceAll(":[0-9]+$", "").equals(url)) url += ":8123";
+            if(url.replaceAll(":[0-9]+$", "").equals(url)
+                    && !url.contains("ui.nabu.casa")
+            ) {
+                url += ":8123";
+            }
         } else {
             url += "/manageapikeys";
         }
